<resources>
    <string name="app_name">MadeEasy</string>
    <string-array name="Categories">
        <item>Rice dishes</item>
        <item>Meat Dishes</item>
        <item>Fast Foods</item>
        <item>Desserts</item>
        <item>Breakfast</item>
        <item>Vegetable Dishes</item>
    </string-array>
    <string name="RiceInfo">This rice salad includes summer squash, tomatoes, spinach, green onions, and a lemon and olive oil dressing. It pairs well with grilled or broiled steak, fish or seafood."</string>
    <string name="Riceingredients">
        Ingredients: \n
    •  2 green onions/scallions (thinly sliced)\n
•  2 to 3 cloves of garlic (crushed and finely minced)\n
•  1 small summer squash (diced)\n
•  1 large tomato (diced)\n
•  1/2 red bell pepper (minced)\n
•  1 cup spinach leaves (rolled together tightly and very thinly sliced/chiffonade technique)\n
•  2 tablespoons finely chopped fresh parsley\n
•  1 small carrot (grated or minced)\n
•  1/4 cup fresh lemon juice\n
•  1/4 cup extra-virgin olive oil\n
•  1 1/2 to 2 cups cooked rice\n
•  Salt and pepper (to taste)\n
•  Optional: slivered toasted almonds \n</string>
    <string name="RiceMethod">Steps to Make It:\n
    1. Toss prepared vegetables together in a glass or ceramic bowl (non-reactive container).\n
    2. In a small bowl with the lemon juice, drizzle olive oil while whisking, to emulsify the liquids. Add to vegetables; cover and refrigerate for an hour.\n
    3. Add cooked, cooled rice; add salt and pepper to taste.\n
    4. To toast almonds, put them in a dry skillet over medium heat. Cook, stirring and turning constantly, just until lightly browned and aromatic.\n
    5. Top with toasted almonds.\n
    6. Refrigerate until serving time.\n</string>
    <string name="Rice2Info">"This easy and delicious recipe for salmon fried rice is quicker to make than most because you start with leftover rice pilaf. It's best prepared in a wok, but you could also use a skillet if you don't have a wok."</string>
    <string name="Rice2ingredients">
        Ingredients: \n
   •   3 tbsp. olive oil\n
•  2-3 cups leftover rice pilaf OR cold cooked rice\n
•  1 (7-ounce) can red salmon (drained)\n
•  1 cup frozen baby peas\n
•  2 eggs (beaten)\n
•  2 tbsp. low sodium soy sauce\n</string>
    <string name="Rice2Method">Steps to Make It:\n
   1.  In heavy skillet or wok over medium-high heat, heat olive oil. Carefully add the leftover rice pilaf or cold cooked rice and stir-fry for a few minutes to heat.
\n

2. Add salmon and frozen peas; stir-fry for 3-5 minutes until peas are hot. Push mixture to sides of skillet or wok and add beaten eggs.
\n
3. Scramble eggs until just set, then stir eggs into rice mixture. Sprinkle with soy sauce and stir-fry for another minute or two, then serve.\n</string>
    <string name="Rice3Info">This sticky rice recipe is simple to make and oh so delicious! A
        meal unto itself, this Thai Sticky Rice with Pork and Mushrooms is a savory dish that is similar to fried rice,
        except it has a wonderfully chewy texture that even kids enjoy.</string>
    <string name="Rice3ingredients">
        Ingredients:\n\n
    •	2 cups Thai sticky rice (also called Thai "sweet rice") soaked in 3+1/2 cups water\n
    •	3-4 strips bacon\n
    •	1/3 cup shallots or purple onion (diced)\n
    •	1 cup shiitake mushroom (diced)\n
    •	1 tsp. garlic (minced)\n
    •	1 red chili (de-seeded and minced, or 1/2 tsp. dried crushed chili (omit for mild rice))\n
    •	1+1/2 Tbsp. fish sauce\n
    •	1+1/2 tsp. dark soy sauce (or mushroom-flavored soy sauce (or 2 Tbsp. regular soy sauce))\n
    •	1 Tbsp. regular soy sauce\n
    •	3 spring onions (finely sliced)\n
    •	1 package banana leaves (or bamboo leaves (thawed if frozen), OR cheesecloth or clean kitchen cloth)\n
    •	Optional garnished: 2 tablespoons fresh basil, cilantro, coriander, or red chili</string>
    <string name="Rice3Method">Steps to Make It:\n\n
         1.	Soak 2 cups sweet (sticky) rice in 3-4 cups water, or enough so water exceeds the rice by at least 1 inch. Soak for at least 40 minutes (if you lose track of time, its no problem - sticky rice can soak up to 4 hours or longer). Note: Sweet rice has a hard outer shell that needs to soften before it can be cooked.
        \n
        2.	While rice is soaking, prepare your steamer. Line a bamboo steamer or colander with 2 layers of banana/bamboo leaf, OR use cheesecloth, or a clean kitchen cloth. To clean and thaw the leaf (if frozen), rinse under hot water. Cut the leaf large enough that it extends over the top. Place steamer over a large pot, and have a tight-fitting lid ready.
        \n
        3.	Place bacon in a large frying pan/wok together with 1-2 Tbsp. water. Fry over medium-high heat until cooked (chewy, not crisp). Remove from heat, leaving all or half the fat in the frying pan.
            \n
        4.	Remove bacon from the pan and cut into small pieces (I use a clean pair of scissors for this, like they do in Asia - much faster and easier than a knife!). Place it back in the frying pan.
                \n
        5.	Also add to the frying pan the shallots or onion, mushrooms, garlic, and chili. Return to medium-high heat and stir-fry 1-2 minutes, until fragrant. If your pan becomes dry, add a little water (1-2 Tbsp.).
        \n</string>
    <string name="Rice4Info">This yummy, aromatic Biryani  is made by the Muslim community in Mumbai
        (previously known as Bombay), hence the name of Bombay biryani. Try it just once and you will be
        hooked! Serve it with raita and salad of your choice.</string>
    <string name="Rice4ingredients">
        Ingredients:\n\n
    •	2 pounds basmati rice\n
    •	20 gm Garam Masalah\n
    •	Salt as needed\n
    •	Half cup cooking oil\n
    •	2 TBSP ginger garlic paste\n
    •	700 gm chicken\n
    •	3 tomato slice\n
    •	1 cup yogurt\n
    •	2 TBSP red chili powder\n
    •	1 TSP Green coriander powder\n
    •	1 TSP cumin powder\n</string>
    <string name="Rice4Method">
        Steps to Make It:\n\n
    1.	Add water in a bowl, then add Guard Rice and soak them for 20-25 Minutes in water\n

        2.	In a bowel, add some water. Then add garam Masalah, salt cooking oil in this water and cook then strain and separate. Then add rice and cook for a while\n
            3.	In a pan, add cooking oil, ginger garlic paste, cumin, chicken, garam Masalah, , yogurt, salt\n

                4.	Red chili powder, green coriander powder, cumin powder, tomato paste, turmeric and cook then add potatoes and simmer it for 5-7 Minutes\n

                    5.	Fry it for 2 minutes.\n</string>
    <string name="MeatInfo">This recipe for Indian​ masala kheema, or meat mince, can be made with any meat
        you prefer—chicken, lamb, pork, goat meat, or any combination such as minced pork and veal—but has
        become synonymous with lamb as this is a pantry staple in India.</string>
    <string name="Breakfast4Info">"Start your day off with a little ray of sunshine - a low-fat smoothie that's one of your five-a-day and tasty too!"</string>
    <string name="Breakfast4ingredients">
        Ingredients: \n
•	500ml carrot juice, chilled\n
•   200g pineapple(fresh or canned)\n
•   2 bananas, broken into chunks\n
•   small piece ginger, peeled\n
•   20g cashew nuts\n
•   juice 1 lime\n</string>
    <string name="Breakfast4Method">Steps to Make It:\n
1.	Put the ingredients in a blender and whizz until smooth. Drink straight away or pour into a bottle to drink on the go. Will keep in the fridge for a day.\n</string>
    <string name="fastinfo1">A mouthwatering take over usual French Fries. These baked Pizza Fries are easy to make, yet so tasty that you can not settle for less. This dish is sure a delight for every pizza lover out here."</string>
    <string name="fastingredients1">
        Ingredients: \n
    • Frozen Fries 1 packet\n
•  Pizza Sauce 1 cup\n
•  Chicken Pepperonis 1 cup\n
•  Capsicum (chopped) ½ medium size\n
•  Onion (chopped) ½ medium size\n
•  Tomato (chopped) ½ medium size\n
•  Jalapenos 4-5\n
•  Black Olive (sliced) 2 tbsp\n
•  Mozzarella Cheese (shredded) 150 gms\n
•  Ranch Sauce as per requirement\n
•  Buffalo Cream Sauce as per requirement\n
•  Dried Oregano 1 tbsp\n
•  Red Chili Flakes 1 tsp \n
•  Rocket Leaves 4\n\n
        Ranch Sauce:\n
•  National’s Mayonnaise ½ cup\n
•  Cream ½ cup\n
•  Clove Garlic (peeled and crushed) 1-2\n
•  Onion Chopped 1 tbsp\n
•  National Salt ¼ tsp\n
•  Mustard Paste ¼ tsp\n
•  Green Onion 2 tbsp\n
•  Parsley (chopped) 1 tbsp\n
•  Dill or Soya 1 tbsp\n
•  Ground Black Pepper ¼ tsp\n\n
        Buffalo Cream Sauce:\n
•  National’s Classic Mayonnaise ½ cup\n
•  Melted Butter 2 tbsp\n
•  Buffalo Sauce 4 tbsp\n
•  Chopped Garlic 2 tbsp\n
•  Hot Sauce 1 tbsp\n
•  Lemon Juice 1 tbsp\n

    </string>
    <string name="fastMethod1">Steps to Make It:\n
    1. First prepare Ranch Sauce by mixing ½ cup National’s Mayonnaise, ½ cup Cream, 1-2 Clove Garlic, 1 tbsp Onion Chopped, ¼ tsp National Salt, 1/2 tsp Mustard Paste, 2 tbsp Green Onion, ) 1 tbsp Parsley (chopped), 1 tbsp Dill or Soya and ¼ tsp Ground Black Pepper.\n
    2. Next make Buffalo Cream Sauce, by mixing ½ cup National’s Classic Mayonnaise, 2 tbsp Melted Butter, 4 tbsp Buffalo Sauce, 2 tbsp Chopped Garlic, 1 tbsp Hot Sauce, 1 tbsp Lemon Juice. Mix well.\n\n
        Pizza Sauce Recipe:\n\n
    1. Blanch 6 tomatoes, peel off the skin and blend it well.\n
    2. Now take 2 tbsp of cooking oil and sauté 1 tbsp of chopped garlic in it and add blended tomatoes, 2 tbsp canned tomato purée, 1 tsp red chili flakes, ½ tsp National Salt and 1 tsp heaped oregano leaves.\n
    3. Cook it until the water is evaporated.\n
    4. Mix everything well till it becomes smooth and creamy.\n
    5. Pre heat the oven on 180 degrees for 30 minutes. Meanwhile, fry the French fries and make them crispy.\n
    6. Now put them in a dish and add pizza sauce on them, add shredded cheese, all the vegetables, add oregano and red chili flakes on top and bake it for 10 minutes until cheese melts and the top layer becomes golden brown.\n
    7. Take it out. Add dollops of ranch and buffalo cream dressing and serve it with rocket leaves.\n
    </string>
    <string name="fastinfo4">Enjoy this scrumptious classic three-layered Club Sandwich recipe, tastier than ever with National Classic Mayo and National Tomato Ketchup."</string>
    <string name="fastingredients4">
        Ingredients: \n
    • Large Bread Slices  6\n
•  Chicken – boiled and shredded ¼ kg\n
•  Chicken Fillets – smoked ¼ kg\n
•  National Classic Mayo 1 cup\n
•  Crushed Black Pepper 1 tbsp\n
•  National Chili Garlic Sauce 1 cup\n
•  Cucumber 1\n
•  Tomato  1\n
•  National Tomato Ketchup 1 cup\n
•  Iceberg Lettuce ½\n
•  Salad Leaves 4\n
•  Eggs 2\n
•  Butter 6 tbsp\n\n
        For Honey Mustard Sauce:\n
•  National Classic Mayo ½ cup\n
•  Honey 1 tbsp heaped\n
•  Mustard Paste 1 tbsp\n\n
        For Bbq Sauce:\n
•  National Tomato Ketchup 3 tbsp\n
•  BBQ Sauce 3 tbsp\n\n
    </string>
    <string name="fastMethod4">Steps to Make It:\n
    1. For Honey Mustard Sauce: Mix all the ingredients together.\n
    2. For BBQ Sauce: Mix all the ingredients together.\n
    3. For Chicken Spread: Mix National Classic Mayo, National Chili Garlic Sauce, crushed black pepper and shredded chicken together and keep it aside.\n
    4. Toast all the breads with 1 tsp butter on each slice. On the first slice, add dollop of the chicken spread, add BBQ sauce and place the other slice. Now generously add honey mustard sauce on the other slice, put fried egg, cucumber, iceberg, tomato, salad leave and smoked chicken filled.\n
    5. Press the sandwich and cut the edges.\n
    6. Serve it with French fries and National Tomato Ketchup.\n
    </string>
</resources>