<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false"
    tools:context=".RiceDish4">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/newcolor"
        tools:ignore="ExtraText"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".RiceDish4"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/rice5"
            />

        <TextView
            android:id="@+id/ricedish1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:fontFamily="sans-serif"
            android:text="Bombay Biryani"
            android:textAlignment="center"
            android:textColor="@color/brown"
            android:textSize="20sp"
            android:textStyle="italic"></TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15dp"
            android:text="@string/Rice4Info">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:textColor="@color/black"
            android:text="@string/Rice4ingredients">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:text="@string/Rice4Method"></TextView>

    </LinearLayout>
</ScrollView>